Fixed wrong font in docs admonitions

--- a/docs/_themes/botogram/static/botogram.css
+++ b/docs/_themes/botogram/static/botogram.css
@@ -185,7 +185,7 @@ div.admonition p.last {
 div.admonition p.admonition-title {
     margin-bottom: 0;
     font-size: 1.2em;
-    font-family: "Glacial Indifference";
+    font-family: "Bitter";
     font-weight: bold;
 }
 
